temp fix for popup out of screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,8 +106,12 @@
     box-sizing: border-box;
     max-height: 80vh;     /* avoid going off screen vertically */
     overflow-y: auto;     /* allow internal scroll if content tall */
-
 }
+
+.align-right {
+    right: 0;
+}
+
 .certificate,
 .sub-cert {
     cursor: pointer; /* show hand cursor */
